examples/pure/errors/break.sme
proc a ()
{
    break;
}

network n () {
    instance _ of a ();
}
